# garminmcp

./: .gitignore  README.md  pyproject.toml  requirements.txt
scripts/: clear-and-reconfigure.md  test_endpoints.py
src/garmin_mcp/: __init__.py  __main__.py  delivery.py  lida_viz.py  serializers.py  server.py  stats.py  visualizers.py
