[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "garmin-mcp"
version = "0.1.0"
description = "A personal MCP server to pull Garmin Connect metrics via garth and fastMCP"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Lokranjan" },
]
maintainers = [
    { name = "Lokranjan" },
]
license = { text = "MIT" }
keywords = ["mcp", "garmin", "garmin-connect", "garth", "fastmcp", "fitness"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "garth>=0.5.0",
    "fastmcp>=2.0.0",
    "numpy>=1.24",
]

[project.urls]
Homepage = "https://github.com/lokranjanp/garminmcp"
Repository = "https://github.com/lokranjanp/garminmcp"

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.scripts]
garmin-mcp = "garmin_mcp.server:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
